--- a/example/index.html
+++ b/example/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="utf8"/>
 	<title>Backbone Autocomplete View test</title>
+	<style type="text/css">
+		.hidden {
+			display: none;
+		}
+	</style>
 </head>
 <body>
 	<div id="app"></div>
-	<script type="text/javascript"></script>
+	<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+	<script type="text/javascript" src="demo.js"></script>
 </body>
 </html>
